# clpAPI

./: .gitignore  BUILD-Linux.md  BUILD-Windows.md  BUILD-macOS.md  DESCRIPTION  INSTALL  MD5  NAMESPACE  NEWS  NEWS.Rd  README.md  configure  configure.ac
.github/workflows/: build-windows-binary.yaml  check-pkg.yaml
R/: clp.R  clpAPI.R  clp_ptrClass.R  generics.R  zzz.R
inst/: NEWS.Rd  c2r.map
inst/doc/: clpAPI.R  clpAPI.Rnw
man/: addColsCLP.Rd  addRowsCLP.Rd  chgColLowerCLP.Rd  chgColUpperCLP.Rd  chgObjCoefsCLP.Rd  chgRowLowerCLP.Rd  chgRowUpperCLP.Rd  clpAPI-package.Rd  delColsCLP.Rd  delProbCLP.Rd  delRowsCLP.Rd  deleteColsCLP.Rd  deleteRowsCLP.Rd  dualCLP.Rd  getColDualCLP.Rd  getColLowerCLP.Rd  getColPrimCLP.Rd  getColUpperCLP.Rd  getIndCLP.Rd  getLogLevelCLP.Rd  getNnzCLP.Rd  getNumColsCLP.Rd  getNumNnzCLP.Rd  getNumRowsCLP.Rd  getObjCoefsCLP.Rd  getObjDirCLP.Rd  getObjValCLP.Rd  getRowDualCLP.Rd  getRowLowerCLP.Rd  getRowPrimCLP.Rd  getRowUpperCLP.Rd  getScaleFlagCLP.Rd  getSolStatusCLP.Rd  getVecLenCLP.Rd  getVecStartCLP.Rd  idiotCLP.Rd  initProbCLP.Rd  loadMatrixCLP.Rd  loadProblemCLP.Rd  primalCLP.Rd  (+13 more)
src/: Makevars.win  clpAPI.c  clpAPI.h  clpR.h  config.h  config.h.in  init.c
tests/: testthat.R
tests/testthat/: test-loadQuadraticObjectiveCLP.R
vignettes/: clpAPI.Rnw
